--- a/index.html
+++ b/index.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My First Web Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      color: #3366cc;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #5cb85c;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #4cae4c;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DevOps Tutorial</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; background: #f4f6f8; }
+        header { background: #222; color: #fff; padding: 1.5rem 0; text-align: center; }
+        .container { max-width: 900px; margin: 2rem auto; background: #fff; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.07);}
+        h1 { margin-bottom: 0.5rem; }
+        .tutorial-section { display: flex; align-items: flex-start; margin-bottom: 2rem; }
+        .tutorial-section i { font-size: 2.5rem; color: #007bff; margin-right: 1.5rem; }
+        .tutorial-content h2 { margin: 0 0 0.5rem 0; }
+        .tutorial-content p { margin: 0; color: #444; }
+        footer { text-align: center; padding: 1rem 0; background: #222; color: #fff; margin-top: 2rem; }
+    </style>
 </head>
 <body>
-  <h1>Welcome to My Page</h1>
-  <p>This is a simple HTML page created just for you!</p>
-  <button onclick="alert('Hello!')">Click Me</button>
+    <header>
+        <h1><i class="fas fa-cogs"></i> DevOps Tutorial</h1>
+        <p>Learn the basics of DevOps with practical examples</p>
+    </header>
+    <div class="container">
+        <div class="tutorial-section">
+            <i class="fas fa-server"></i>
+            <div class="tutorial-content">
+                <h2>1. Introduction to DevOps</h2>
+                <p>DevOps combines development and operations to improve collaboration and productivity by automating infrastructure, workflows, and continuously measuring application performance.</p>
+            </div>
+        </div>
+        <div class="tutorial-section">
+            <i class="fas fa-code"></i>
+            <div class="tutorial-content">
+                <h2>2. Version Control with Git</h2>
+                <p>Learn how to use Git for source code management, enabling teams to track changes, collaborate, and maintain code integrity.</p>
+            </div>
+        </div>
+        <div class="tutorial-section">
+            <i class="fas fa-cube"></i>
+            <div class="tutorial-content">
+                <h2>3. Continuous Integration</h2>
+                <p>Set up CI pipelines to automatically build and test code changes, ensuring software quality and faster delivery.</p>
+            </div>
+        </div>
+        <div class="tutorial-section">
+            <i class="fas fa-cloud-upload-alt"></i>
+            <div class="tutorial-content">
+                <h2>4. Continuous Deployment</h2>
+                <p>Automate deployment processes to deliver applications to production quickly and reliably.</p>
+            </div>
+        </div>
+        <div class="tutorial-section">
+            <i class="fas fa-shield-alt"></i>
+            <div class="tutorial-content">
+                <h2>5. Monitoring & Security</h2>
+                <p>Monitor application performance and implement security best practices to ensure reliability and safety.</p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        &copy; 2024 DevOps Tutorial. All rights reserved.
+    </footer>
 </body>
 </html>
